# aizo-project2

./: .gitignore  CMakeLists.txt  README.md
results/: benchmark_A.csv  benchmark_B.csv
scripts/: compare_with_networkx.py  make_networkx_plots.py  make_plots.py  prepare_snap_dataset.py  run_A.py  run_B.py  run_dataset_email.py  run_dataset_email_csv.py
src/: main.cpp  main.h
src/include/algorithms/: BellmanFord.h  Dijkstra.h  FordFulkerson.h  Kruskal.h  Prim.h
src/include/graph/: AdjacencyListGraph.h  Edge.h  GraphBuilder.h  GraphData.h  GraphGenerator.h  IncidenceMatrixGraph.h
src/include/io/: CsvLogger.h  DateTime.h  GraphLoader.h
src/include/lib/: Parameters.h
src/include/utils/: Timer.h
